# frases

./: config.json  main.py  nuke.py  pyproject.toml
templates/: dash.md  index.md  json.md  sugerir.md  sugerirbeta.md
templates/inc/: foot.html  head.html
