[tool.poetry]
name = "Frases"
version = "2.0.0"
description = "Base de datos de frases"
authors = ["Luqaska"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
Flask = "^2.1.2"
replit = "^3.2.4"
Markdown = "^3.3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"